--- a/index.html
+++ b/index.html
@@ -90,17 +90,15 @@
     
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Sobre</h2>
-            <p>Bacharel em Ciência da Computação, onde contribui junto ao Instituto de Ciências Matemáticas e de Computação (ICMC), campus de São Carlos. Possui 12 anos de experiência na área de desenvolvimento de software, com ênfase na análise, construção e arquitetura de sistemas Web e Mobile. Além disso, é certificado nas plataformas .NET (Microsoft), Java (Oracle) e Android (Google).</p>
-          </div>
-
+            <p>Bacharel em Ciência da Computação,  Atualmente focado no estudo de tecnologias como Java, JavaScript, SQL. Apto a uma nova oportunidade na área de desenvolvimento back-end.</p>
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16">
               <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Experiências
             </h2>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>Digital Innovation One (DIO)</b></h5>
-              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Março 2021 - <span class="w3-tag w3-indigo w3-round">Atual</span></h6>
-              <p>Planejar o roadmap dos conteúdos educacionais da plataforma, tendo em vista as principais tendências de mercado e necessidades das empresas parceiras. Além de garantir que as experiências de aprendizagem tenham total sinergia com a nossa metodologia educacional.</p>
+              <h5 class="w3-opacity"><b>Técnico de Sistemas e Apoio Computacional I</b></h5>
+              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Outubro 2021 - <span class="w3-tag w3-indigo w3-round">Junho 2022</span></h6>
+              <p>Local onde atuei como Desenvolvedor full stack na SGI (Superintendência de Gestão da Informação), onde obtive experiência de trabalho com metodologia ágil, boas práticas de programação, além de contribuir na criação e manutenção do site da educação do Estado do Mato Grosso do Sul.</p>
             </div>
           </div>
   
@@ -110,24 +108,24 @@
             </h2>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Digital Innovation One (DIO)</b></h5>
-              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Março 2021 - <span class="w3-tag w3-indigo w3-round">Atual</span></h6>
+              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Março 2023 - <span class="w3-tag w3-indigo w3-round">Atual</span></h6>
               <p>
                 Maior plataforma de educação aberta em TI da América Latina, com mais 1 milhão de usuários. 
                 A DIO possui parcerias com algumas das empresas mais inovadoras do mundo, proporcionando experiências 
                 de ensino imersivas e com foco em empregabilidade. Nesse contexto, seguem meus principais certificados:
               </p>
               <ul>
-                <li><a href="https://www.dio.me/certificate/762101D2" target="_blank">Formação: Programação Reativa com Spring WebFlux (36h)</a></li>
-                <li><a href="https://www.dio.me/certificate/07041B99" target="_blank">Curso: Desenvolvimento Mobile Nativo Para Android (1h)</a></li>
-                <li><a href="https://www.dio.me/certificate/F12AC30B" target="_blank">Curso: Componentes, Layouts e UI/UX Em Apps Android (3h)</a></li>
-                <li><a href="https://www.dio.me/certificate/3FB20BF1" target="_blank">Curso: Java e Kotlin Juntos!? Construindo Apps Android (3h)</a></li>
+                <li><a href="https://www.dio.me/certificate/762101D2" target="_blank">Formação: Exemplo 1 (36h)</a></li>
+                <li><a href="https://www.dio.me/certificate/C81F2371" target="_blank">Curso: Trabalhando em Equipes Ágeis (3h)</a></li>
+                <li><a href="https://www.dio.me/certificate/EF7FB2C6" target="_blank">Projeto: Criando um Banco Digital com Java e Orientação a Objetos (2h)</a></li>
+                <li><a href="https://www.dio.me/certificate/3FB20BF1" target="_blank">Curso: Exemplo 2 (3h)</a></li>
               </ul>
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>Universidade de São Paulo (USP)</b></h5>
-              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dezembro 2018 - Agosto 2023</h6>
-              <p>Doutorando em Engenharia de Computação com foco em acessibildiade de conteúdos educacionais.</p>
+              <h5 class="w3-opacity"><b>Universidade Anhanguera-Uniderp</b></h5>
+              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Julho 2019 - Junho 2023</h6>
+              <p>Bacharel em Ciência da Computação.</p>
             </div>
           </div>
 
@@ -163,8 +161,8 @@
   
     <footer class="w3-container w3-indigo w3-center w3-margin-top">
       <p>Minhas Redes Sociais</p>
-      <a href="https://github.com/falvojr" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
-      <a href="https://www.linkedin.com/in/falvojr" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+      <a href="https://github.com/Andre-Proenca" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
+      <a href="https://www.linkedin.com/in/andreleivaproenca/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
       <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
     </footer>
   
