--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Sobre</h2>
-            <p>Bacharel em Ciência da Computação,  Atualmente focado no estudo de tecnologias como Java, JavaScript, SQL. Apto a uma nova oportunidade na área de desenvolvimento back-end.</p>
+            <p>Bacharel em Ciência da Computação,  atualmente focado no estudo de tecnologias como Java, JavaScript, SQL. Apto a uma nova oportunidade na área de desenvolvimento back-end.</p>
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16">
               <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Experiências
@@ -108,7 +108,7 @@
             </h2>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Digital Innovation One (DIO)</b></h5>
-              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Março 2023 - <span class="w3-tag w3-indigo w3-round">Atual</span></h6>
+              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Abril 2023 - <span class="w3-tag w3-indigo w3-round">Atual</span></h6>
               <p>
                 Maior plataforma de educação aberta em TI da América Latina, com mais 1 milhão de usuários. 
                 A DIO possui parcerias com algumas das empresas mais inovadoras do mundo, proporcionando experiências 
@@ -118,8 +118,16 @@
                 <li><a href="https://www.dio.me/certificate/762101D2" target="_blank">Formação: Exemplo 1 (36h)</a></li>
                 <li><a href="https://www.dio.me/certificate/C81F2371" target="_blank">Curso: Trabalhando em Equipes Ágeis (3h)</a></li>
                 <li><a href="https://www.dio.me/certificate/EF7FB2C6" target="_blank">Projeto: Criando um Banco Digital com Java e Orientação a Objetos (2h)</a></li>
-                <li><a href="https://www.dio.me/certificate/3FB20BF1" target="_blank">Curso: Exemplo 2 (3h)</a></li>
               </ul>
+              <div class="w3-container">
+                <h5 class="w3-opacity"><b>Softblue</b></h5>
+                <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro 2023 - <span class="w3-tag w3-indigo w3-round">Atual</span></h6>
+                <p>
+                  A Softblue surgiu em 2003 para atender a demanda de mercado, que buscava soluções web inteligentes. Rapidamente o negócio se expandiu e possibilitou aos fundadores compartilharem todo o conhecimento que possuem em programação através de cursos online.. Nesse contexto, seguem meus principais certificados:
+                </p>
+                <ul>
+                   <li><a href="http://www.softblue.com.br/certificado/496123DA2306" target="_blank">Curso: Fundamentos de Java (40h)</a></li>
+                </ul>
               <hr>
             </div>
             <div class="w3-container">
