--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Sobre</h2>
             <p>Bacharel em Ciência da Computação,  atualmente focado no estudo de tecnologias como Java, JavaScript, SQL. Apto a uma nova oportunidade na área de desenvolvimento back-end.</p>
+          </div>
+          
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16">
               <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Experiências
