--- a/index.html
+++ b/index.html
@@ -36,47 +36,47 @@
               <h2>>Andre Leiva Proenca</h2>
             </div>
             <div class="w3-container">
-              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Bacharel em Ciência da Computação</p>
-              <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Campo Grande - MS, Brasil</p>
-              <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>andreproenca@hotmail.com</p>
-              <p><i class="fa fa-whatsapp fa-fw w3-margin-right w3-large w3-text-teal"></i>(67) 99928-5909</p>
+              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-black"></i>Bacharel em Ciência da Computação</p>
+              <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-black"></i>Campo Grande - MS, Brasil</p>
+              <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-black"></i>andreproenca@hotmail.com</p>
+              <p><i class="fa fa-whatsapp fa-fw w3-margin-right w3-large w3-text-black"></i>(67) 99928-5909</p>
               <hr>
   
               <p class="w3-large">
-                <b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b>
+                <b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-black"></i>Skills</b>
               </p>
               <p>Java</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">50%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:50%">50%</div>
               </div>
               <p>SQL</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">50%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:50%">50%</div>
               </div>
               <p>JavaScript</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">50%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:50%">50%</div>
               </div>
               <p>HTML/CSS</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">50%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-black" style="width:50%">50%</div>
               </div>
               <br>
   
               <p class="w3-large w3-text-theme">
-                <b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Idiomas</b>
+                <b><i class="fa fa-globe fa-fw w3-margin-right w3-text-black"></i>Idiomas</b>
               </p>
               <p>English/Inglês</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:100%"></div>
+                <div class="w3-round-xlarge w3-black" style="height:24px;width:100%"></div>
               </div>
               <p>Português</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:100%"></div>
+                <div class="w3-round-xlarge w3-black" style="height:24px;width:100%"></div>
               </div>
               <p>Español/Espanhol</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:25%"></div>
+                <div class="w3-round-xlarge w3-black" style="height:24px;width:25%"></div>
               </div>
               <br>
             </div>
@@ -89,34 +89,34 @@
         <div class="w3-twothird">
     
           <div class="w3-container w3-card w3-white w3-margin-bottom">
-            <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Sobre</h2>
+            <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-black"></i>Sobre</h2>
             <p>Bacharel em Ciência da Computação,  atualmente focado no estudo de tecnologias como Java, JavaScript, SQL. Apto a uma nova oportunidade na área de desenvolvimento back-end.</p>
           </div>
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16">
-              <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Experiências
+              <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-black"></i>Experiências
             </h2>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Técnico de Sistemas e Apoio Computacional I</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Outubro 2021 - <span class="w3-tag w3-teal w3-round">Junho 2022</span></h6>
+              <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Outubro 2021 - <span class="w3-tag w3-black w3-round">Junho 2022</span></h6>
               <p>Local onde atuei como Desenvolvedor full stack na SGI (Superintendência de Gestão da Informação), onde obtive experiência de trabalho com metodologia ágil, boas práticas de programação, além de contribuir na criação e manutenção do site da educação do Estado do Mato Grosso do Sul.</p>
               <hr>
             </div>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - FIM</h6>
+              <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - FIM</h6>
               <p>TODO</p>
             </div>
           </div>
   
           <div class="w3-container w3-card w3-white">
             <h2 class="w3-text-grey w3-padding-16">
-              <i class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Educação
+              <i class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-black"></i>Educação
             </h2>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Digital Innovation One (DIO)</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Abril 2023 - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
+              <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Abril 2023 - <span class="w3-tag w3-black w3-round">Atual</span></h6>
               <p>
                 Maior plataforma de educação aberta em TI da América Latina, com mais 1 milhão de usuários. 
                 A DIO possui parcerias com algumas das empresas mais inovadoras do mundo, proporcionando experiências 
@@ -131,7 +131,7 @@
             </div>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Softblue</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro 2023 - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
+              <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro 2023 - <span class="w3-tag w3-black w3-round">Atual</span></h6>
               <p>
                 A Softblue surgiu em 2003 para atender a demanda de mercado, que buscava soluções web inteligentes. Rapidamente o negócio se expandiu e possibilitou aos fundadores compartilharem todo o conhecimento que possuem em programação através de cursos online.. Nesse contexto, segue meu principal certificado:
               </p>
@@ -142,17 +142,17 @@
             </div>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Universidade Anhanguera-Uniderp</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Julho 2019 - Junho 2023</h6>
+              <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Julho 2019 - Junho 2023</h6>
               <p>Bacharel em Ciência da Computação.</p>
             </div>
           </div>
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16">
-              <i class="fa fa-git fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Projetos
+              <i class="fa fa-git fa-fw w3-margin-right w3-xxlarge w3-text-black"></i>Projetos
             </h2>
             <div class="w3-container">
-              <h6 class="w3-text-teal">
+              <h6 class="w3-text-black">
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
                 <a href="LINK_GITHUB" target="_blank">USUARIO_GITHUB/REPO</a>
               </h6>
@@ -160,7 +160,7 @@
               <hr>
             </div>
             <div class="w3-container">
-              <h6 class="w3-text-teal">
+              <h6 class="w3-text-black">
                 <i class="fa fa-gitlab fa-fw w3-margin-right"></i>
                 <a href="LINK_GITLAB" target="_blank">USUARIO_GITLAB/REPO</a>
               </h6>
@@ -177,7 +177,7 @@
       <!-- End Page Container -->
     </div>
   
-    <footer class="w3-container w3-teal w3-center w3-margin-top">
+    <footer class="w3-container w3-black w3-center w3-margin-top">
       <p>Minhas Redes Sociais</p>
       <a href="https://github.com/Andre-Proenca" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
       <a href="https://www.linkedin.com/in/andreleivaproenca/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
