--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
+              <h5 class="w3-opacity"><b>EM CONSTRUÇÃO</b></h5>
               <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - FIM</h6>
-              <p>TODO</p>
+              <p>EM CONSTRUÇÃO</p>
             </div>
           </div>
   
@@ -162,9 +162,9 @@
             <div class="w3-container">
               <h6 class="w3-text-black">
                 <i class="fa fa-gitlab fa-fw w3-margin-right"></i>
-                <a href="LINK_GITLAB" target="_blank">USUARIO_GITLAB/REPO</a>
+                <a href="EM_CONSTRUCAO" target="_blank">USUARIO_GITLAB/REPO</a>
               </h6>
-              <p>TODO</p>
+              <p>EM CONSTRUÇÃO</p>
             </div>
           </div>
   
